# HelloYaponiya

./: .gitignore  Dockerfile  Readme.md  pyproject.toml
Src/: server.py
example/registration/: answer.json  markup.json  registration.xlsx  translations.json
src/: server.py  settings.py
src/database/: models.py
src/fixtures/: form_pairs.json  formatted_locales.csv  formatted_locales.json
src/formproc/: formproc.py
src/models/: enums.py
src/routers/: templates.py
src/routers/templates/: templates.py
src/routers/translations/: translations.py
src/tests/: formproc.py
src/translation_api/: client.py
